EDU-1507 Fix markdown scrollbars with blockquotes

--- a/src/components/markdown.less
+++ b/src/components/markdown.less
@@ -90,7 +90,7 @@
     max-width: 100%;
   }
 
-  & > *:last-child {
+  & > *:last-child:not(blockquote) {
     margin-bottom: 0;
   }
 }
